--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,25 @@
-.App {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+* {
+    box-sizing: border-box;
 }
 
 body {
-    padding: 0;
-    margin: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .board {
-    width: 300px;
-    height: 300px;
-    background-color: aquamarine;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 110px 110px 110px;
+    grid-template-columns: 110px 110px 110px;
+}
+
+.square {
+    width: 100px;
+    height: 100px;
     border: 1px solid black;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
